@@ -1,7 +1,7 @@
 #include <windows.h>
 
-#define VER_COMMA 1,5,0,0
-#define VER_STR "1.5\0"
+#define VER_COMMA 1,6,0,0
+#define VER_STR "1.6\0"
 
 #define VER_FILEVERSION VER_COMMA
 #define VER_FILEVERSION_STR VER_STR
