@@ -13,6 +13,7 @@ Process Hacker
    * All list views now have sort arrows
    * Network list now displays process tooltips
    * Decreased memory and CPU usage
+   * Added a glossary to Help
  * FIXED:
    * #2820170 - "System.ArgumentOutOfRangeException in network list"
    * #2845427 - "Indicator integer overflow"
